Fix rare race condition crash.

Plus surrounding code cleanup.

BUG:323496